more info in update file

--- a/Updates.html
+++ b/Updates.html
@@ -407,6 +407,7 @@ summary {
 <p>Did the SST transect studies to look for better/other ways to characterize the SST gradients both temporally and spatially. This work is summarized here.</p>
 <p><a href="http://rpubs.com/eeholmes/SSTKerala" class="uri">http://rpubs.com/eeholmes/SSTKerala</a></p>
 <p>Not clear how/whether to use this for Sardine Paper 2. Leave for Sardine Paper 3 (upwelling dynamics).</p>
+<p>Maybe redo with SST seasonal anomaly like in Boyer et al 2001.</p>
 </div>
 <div id="may-8-2019" class="section level1">
 <h1>May 8, 2019</h1>
